<resources>
    <string name="app_name">eLoc Digital Address System</string>
    <string name="google_api">AIzaSyCbE39jSULi6zY0cJ5XGGa7QkWTEe_Tf0M</string>

    <string name="no_internet_connection">Please check your internet connection.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="service">Service (on/off)</string>
    <string name="navigator">Navigator</string>
    <string name="address">Address</string>
    <string name="location">Location History</string>
    <string name="reemoveLocationHistory">Remove Location History</string>
    <string name="Bookmark">BookMark</string>
    <string name="Settings">Settings</string>
    <string name="geteloc">Get Eloc</string>
    <string name="qrcode">QR Code</string>
    <string name="search_eloc">Search eLoc</string>
    <string name="locationtrackingtime">Location Tracking Time Interval</string>
    <string name="typeofMap">Type Of Map</string>
    <string name="currentLocation">Current Location</string>
    <string name="search_here">Search Here</string>
    <string name="search_here_eloc">Search eLoc 2L6WMS</string>
    <string name="nearBy">Near By places</string>
    <string name="current_location">Current Location</string>

    <string name="city_place">City/Place</string>
    <string name="show_map">Click on map to know Location Addresses</string>


    <string name="bookmar_save">Enter Address to Bookmark</string>
    <string name="from">Source</string>
    <string name="to">Destination</string>


    <string-array name="title">
        <item>@string/service</item>
        <item>@string/current_location</item>
        <item>@string/address</item>
        <item>@string/service</item>
        <item>@string/current_location</item>
        <item>@string/navigator</item>
        <item>@string/nearBy</item>
        <item>@string/address</item>
        <item>@string/location</item>
        <item>@string/Bookmark</item>
        <item>@string/geteloc</item>
        <item>@string/qrcode</item>
        <item>@string/search_eloc</item>
        <item>@string/Settings</item>
    </string-array>

    <string name="range">Range :</string>


    <string-array name="proximity_radius">
        <item>10 Km</item>
        <item>15 Km</item>
        <item>25 Km</item>
        <item>35 Km</item>
        <item>45 Km</item>
        <item>50 Km</item>

    </string-array>


    <string name="tenMinutes">10 Minutes</string>
    <string name="fifteenMinutes">15 Minutes</string>
    <string name="twentyMinutes">20 Minutes</string>
    <string name="thirtyMinutes">30 Minutes</string>
    <string name="oneHour">1 Hour</string>

    <string-array name="radioTime">
        <item>@string/tenMinutes</item>
        <item>@string/fifteenMinutes</item>
        <item>@string/twentyMinutes</item>
        <item>@string/thirtyMinutes</item>
        <item>@string/oneHour</item>
    </string-array>

    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>

    <string name="near_places">Near By Places</string>


    <string name="spinner_title">Range Near places</string>


    <string name="clear_listy">DO you want to clear the list ?</string>


    <!-- custom string for register form -->

    <string name="full_name">Full Name</string>

    <string name="email">Email</string>

    <string name="mob_no">Mobile No</string>

    <string name="password">Password</string>

    <string name="confirm_password">Confirm Password</string>

    <!-- custom string for register form ends here -->

    <!-- custom string for IP form -->
    <string name="ip_address">IP Address</string>

    <!-- custom string for IP form ends here -->


    <!-- custom string for Get eLoc form -->

    <string name="get_eloc">Get eLoc</string>
    <string name="hno">House/Flat/Door No</string>
    <string name="street_road">Street/Road/Lane</string>
    <string name="landmark">Landmark</string>
    <string name="area_locality">Area/Locality</string>
    <string name="village_town">Village/Town/City</string>
    <string name="pincode">PIN Code</string>
    <string name="title_activity_dashboard">dashboardActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_eloc_search">Map</string>
    <string name="title_activity_eloc_by_scan">Map</string>

    <!-- custom string for Get eLoc form ends here -->


</resources>
