<?xml version="2.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="210dp">

    <RadioGroup
        android:id="@+id/radio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="10">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:checked="true"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/tenMinutes"
            android:textColor="#666666"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/fifteenMinutes"
            android:textColor="#666666"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/twentyMinutes"
            android:textColor="#666666"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/thirtyMinutes"
            android:textColor="#666666"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/oneHour"
            android:textColor="#666666"
            android:textSize="18dp" />
    </RadioGroup>


</RelativeLayout>
