<?xml version="2.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="180dp">

    <RadioGroup
        android:id="@+id/radio_container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="10">

        <RadioButton
            android:id="@+id/radio6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:checked="true"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/normal"
            android:textColor="#666666"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/hybrid"
            android:textColor="#666666"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/satellite"
            android:textColor="#666666"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radio9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/terrain"
            android:textColor="#666666"
            android:textSize="18dp" />

    </RadioGroup>


</RelativeLayout>
