<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentBackground">


    <ImageButton
        android:id="@+id/btn_cancel"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cancel_selector" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_cancel"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="60dp">

        <RelativeLayout
            android:id="@+id/layt1"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/navigator"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layt2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/layt1"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/btn_crrent_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/location_selector" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layt3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/layt2"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbar">

            <EditText
                android:id="@+id/edt_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorTransparent"
                android:hint="@string/from"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorHint"
                android:textSize="18dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layt4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/layt3"
            android:layout_marginTop="15dp"
            android:background="@drawable/textbar">

            <EditText
                android:id="@+id/edt_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorTransparent"
                android:hint="@string/to"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorHint"
                android:textSize="18dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/layt4"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/find_route_btn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/find_route_selector" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>